<resources>
    <string name="app_name">Journey_Journal</string>
    <string name="Home">Home</string>
    <string name="About">about</string>
    <string name="Contact">contact</string>
    <string name="Share">share</string>
    <string name="Setting">setting</string>
    <string name="Support">support</string>
    <string name="SendGift">sengift</string>
    <string name="journey_image">Journey Image</string>
    <string name="journey_title">Mardi Hill Trekking</string>
    <string name="pokhara_kaski_nepal">Pokhara, Kaski, Nepal</string>
    <string name="journey_desc">Mardi Himal Trek is a trending short hiking trail that is suitable to spend 1 week’s holiday in Nepal.</string>
    <string name="back">Back</string>
    <string name="journey_location">Delhi India-803213</string>
    <string name="show_image">Show Image</string>
    <string name="enter_title">Enter Title</string>
    <string name="type_description_in_short">Type Description in short</string>
</resources>