<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home_menu"
        android:title="@string/Home"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item android:id="@+id/about_menu"
        android:title="@string/About"
        android:icon="@drawable/ic_baseline_add_circle_24"/>

    <item android:id="@+id/contact_menu"
        android:title="@string/Contact"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item android:id="@+id/share_menu"
        android:title="@string/Share"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item android:title="Other">
        <menu>
            <item android:id="@+id/setting_menu"
                android:title="@string/Setting"
                android:icon="@drawable/ic_baseline_home_24"/>
            <item android:id="@+id/support_menu"
                android:title="@string/Support"
                android:icon="@drawable/ic_baseline_home_24"/>
            <item android:id="@+id/send_menu"
                android:title="@string/SendGift"
                android:icon="@drawable/ic_baseline_home_24"/>
        </menu>

    </item>
</menu>